2005-10-17  Jonathan Pryor <jonpryor@vt.edu>

	* UnixGroup.cs, UnixGroupInfo.cs, UnixFile.cs, UnixFileSystemInfo.cs,
	  UnixStream.cs, UnixSymbolicLinkInfo.cs, UnixUser.cs, UnixUserInfo.cs:
	  Start migrating uid/gid to long (from uint) for CLS compliance.
	  (Full migration must wait 'til after the next release as this would
	  require changes to existing members.)
	* UnixEnvironment.cs: Above, and add RealUserId/RealGroupId and
	  EffectiveUserId/EffectiveGroupId.

2005-10-14  Jonathan Pryor <jonpryor@vt.edu>

	* Catalog.cs: Create a constructor and mark it [Obsolete].  It will be made
	  private after the next release.
	* UnixFile.cs, UnixStream.cs: Deal with Mono.Unix.Native type name changes.
	* UnixFileSystemInfo.cs: [Obsolete] more members; Deal with Mono.Unix.Native 
	  type name changes.
	* Syscall.cs: Create maps for PathConf, SysConf, ConfStr again; fpathconf(),
	  pathconf(), and sysconf() should call Native.Syscall since the
	  MonoPosixHelper.so helpers have changed.

2005-10-13  Jonathan Pryor <jonpryor@vt.edu>

	* UnixMarshal.cs: More/better StringToAlloc/PtrToString which take a
	  System.Text.Encoding instance for proper string marshaling.  
	  - PtrToString(string,Encoding) is particularly tricky due to variable
	    length encodings.
	  - Fix StringToAlloc so that it works properly with UTF-16 encodings 
	    (we need a terminating null 16-bit word, not a null byte).
	  - StringToAlloc overload for doing substrings.

2005-10-12  Jonathan Pryor <jonpryor@vt.edu>

	* UnixStream.cs: Check for EROFS and EINVAL in Flush().  Snorp was getting
	  an exception when he created a UnixStream around a socket, because
	  sockets can't be flushed.  It should be acceptable to create a UnixStream
	  around a socket, so don't throw an exception in this scenario.

2005-10-06  Jonathan Pryor <jonpryor@vt.edu>

	* UnixDirectory.cs, UnixDirectoryInfo.cs UnixFile.cs, UnixFileSystemInfo.cs, 
	  UnixGroupInfo.cs, UnixIOException.cs, UnixStream.cs, UnixUserInfo.cs: