@@ -1,5 +1,13 @@
 2005-10-17  Jonathan Pryor <jonpryor@vt.edu>
 
+	* UnixDriveInfo.cs, UnixEnvironment.cs, UnixFile.cs, UnixFileSystemInfo.cs, 
+	  UnixGroup.cs, UnixStream.cs, UnixUser.cs: Don't use SetLastError(), since
+	  it's use is (1) incorrect, and (2) will be going away with the move to
+	  Mono.Unix.Native.Syscall.  Instead use the Native.Syscall.* APIs which 
+	  set errno sanely.
+
+2005-10-17  Jonathan Pryor <jonpryor@vt.edu>
+
 	* UnixGroup.cs, UnixGroupInfo.cs, UnixFile.cs, UnixFileSystemInfo.cs,
 	  UnixStream.cs, UnixSymbolicLinkInfo.cs, UnixUser.cs, UnixUserInfo.cs:
 	  Start migrating uid/gid to long (from uint) for CLS compliance.
